// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should allow to custom anchor content 1`] = `
<div class="mi-index-anchor">
  Title A
</div>
`;

exports[`should render active anchor when stick prop is true and has stickyOffsetTop 1`] = `
<div class="mi-index-bar">
  <div class="mi-index-bar__sidebar">
    <span
      class="mi-index-bar__index"
      data-index="A"
    >
      A
    </span>
    <span
      class="mi-index-bar__index"
      data-index="B"
    >
      B
    </span>
    <span
      class="mi-index-bar__index"
      data-index="C"
    >
      C
    </span>
    <span
      class="mi-index-bar__index"
      data-index="D"
    >
      D
    </span>
    <span
      class="mi-index-bar__index"
      data-index="E"
    >
      E
    </span>
    <span
      class="mi-index-bar__index"
      data-index="F"
    >
      F
    </span>
    <span
      class="mi-index-bar__index"
      data-index="G"
    >
      G
    </span>
    <span
      class="mi-index-bar__index"
      data-index="H"
    >
      H
    </span>
    <span
      class="mi-index-bar__index"
      data-index="I"
    >
      I
    </span>
    <span
      class="mi-index-bar__index"
      data-index="J"
    >
      J
    </span>
    <span
      class="mi-index-bar__index"
      data-index="K"
    >
      K
    </span>
    <span
      class="mi-index-bar__index"
      data-index="L"
    >
      L
    </span>
    <span
      class="mi-index-bar__index"
      data-index="M"
    >
      M
    </span>
    <span
      class="mi-index-bar__index"
      data-index="N"
    >
      N
    </span>
    <span
      class="mi-index-bar__index"
      data-index="O"
    >
      O
    </span>
    <span
      class="mi-index-bar__index"
      data-index="P"
    >
      P
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Q"
    >
      Q
    </span>
    <span
      class="mi-index-bar__index"
      data-index="R"
    >
      R
    </span>
    <span
      class="mi-index-bar__index"
      data-index="S"
    >
      S
    </span>
    <span
      class="mi-index-bar__index"
      data-index="T"
    >
      T
    </span>
    <span
      class="mi-index-bar__index"
      data-index="U"
    >
      U
    </span>
    <span
      class="mi-index-bar__index"
      data-index="V"
    >
      V
    </span>
    <span
      class="mi-index-bar__index"
      data-index="W"
    >
      W
    </span>
    <span
      class="mi-index-bar__index"
      data-index="X"
    >
      X
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Y"
    >
      Y
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Z"
    >
      Z
    </span>
  </div>
  <div data-index="0">
    <div class="mi-index-anchor">
      A
    </div>
  </div>
  <div style="height: 32px;">
    A1
  </div>
  <div data-index="1">
    <div class="mi-index-anchor">
      B
    </div>
  </div>
  <div style="height: 32px;">
    B1
  </div>
  <div data-index="2">
    <div class="mi-index-anchor">
      C
    </div>
  </div>
  <div style="height: 32px;">
    C1
  </div>
</div>
`;

exports[`should render active anchor when stick prop is true and has stickyOffsetTop 2`] = `
<div class="mi-index-bar">
  <div class="mi-index-bar__sidebar">
    <span
      class="mi-index-bar__index mi-index-bar__index--active"
      data-index="A"
    >
      A
    </span>
    <span
      class="mi-index-bar__index"
      data-index="B"
    >
      B
    </span>
    <span
      class="mi-index-bar__index"
      data-index="C"
    >
      C
    </span>
    <span
      class="mi-index-bar__index"
      data-index="D"
    >
      D
    </span>
    <span
      class="mi-index-bar__index"
      data-index="E"
    >
      E
    </span>
    <span
      class="mi-index-bar__index"
      data-index="F"
    >
      F
    </span>
    <span
      class="mi-index-bar__index"
      data-index="G"
    >
      G
    </span>
    <span
      class="mi-index-bar__index"
      data-index="H"
    >
      H
    </span>
    <span
      class="mi-index-bar__index"
      data-index="I"
    >
      I
    </span>
    <span
      class="mi-index-bar__index"
      data-index="J"
    >
      J
    </span>
    <span
      class="mi-index-bar__index"
      data-index="K"
    >
      K
    </span>
    <span
      class="mi-index-bar__index"
      data-index="L"
    >
      L
    </span>
    <span
      class="mi-index-bar__index"
      data-index="M"
    >
      M
    </span>
    <span
      class="mi-index-bar__index"
      data-index="N"
    >
      N
    </span>
    <span
      class="mi-index-bar__index"
      data-index="O"
    >
      O
    </span>
    <span
      class="mi-index-bar__index"
      data-index="P"
    >
      P
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Q"
    >
      Q
    </span>
    <span
      class="mi-index-bar__index"
      data-index="R"
    >
      R
    </span>
    <span
      class="mi-index-bar__index"
      data-index="S"
    >
      S
    </span>
    <span
      class="mi-index-bar__index"
      data-index="T"
    >
      T
    </span>
    <span
      class="mi-index-bar__index"
      data-index="U"
    >
      U
    </span>
    <span
      class="mi-index-bar__index"
      data-index="V"
    >
      V
    </span>
    <span
      class="mi-index-bar__index"
      data-index="W"
    >
      W
    </span>
    <span
      class="mi-index-bar__index"
      data-index="X"
    >
      X
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Y"
    >
      Y
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Z"
    >
      Z
    </span>
  </div>
  <div
    data-index="0"
    style="height: 10px;"
  >
    <div
      class="mi-index-anchor mi-index-anchor--sticky mi-hairline--bottom"
      style="transform: translate3d(0, 42px, 0);"
    >
      A
    </div>
  </div>
  <div style="height: 32px;">
    A1
  </div>
  <div data-index="1">
    <div class="mi-index-anchor">
      B
    </div>
  </div>
  <div style="height: 32px;">
    B1
  </div>
  <div
    data-index="2"
    style
  >
    <div class="mi-index-anchor">
      C
    </div>
  </div>
  <div style="height: 32px;">
    C1
  </div>
</div>
`;

exports[`should update active anchor after page scroll 1`] = `
<div class="mi-index-bar">
  <div class="mi-index-bar__sidebar">
    <span
      class="mi-index-bar__index mi-index-bar__index--active"
      data-index="A"
    >
      A
    </span>
    <span
      class="mi-index-bar__index"
      data-index="B"
    >
      B
    </span>
    <span
      class="mi-index-bar__index"
      data-index="C"
    >
      C
    </span>
    <span
      class="mi-index-bar__index"
      data-index="D"
    >
      D
    </span>
    <span
      class="mi-index-bar__index"
      data-index="E"
    >
      E
    </span>
    <span
      class="mi-index-bar__index"
      data-index="F"
    >
      F
    </span>
    <span
      class="mi-index-bar__index"
      data-index="G"
    >
      G
    </span>
    <span
      class="mi-index-bar__index"
      data-index="H"
    >
      H
    </span>
    <span
      class="mi-index-bar__index"
      data-index="I"
    >
      I
    </span>
    <span
      class="mi-index-bar__index"
      data-index="J"
    >
      J
    </span>
    <span
      class="mi-index-bar__index"
      data-index="K"
    >
      K
    </span>
    <span
      class="mi-index-bar__index"
      data-index="L"
    >
      L
    </span>
    <span
      class="mi-index-bar__index"
      data-index="M"
    >
      M
    </span>
    <span
      class="mi-index-bar__index"
      data-index="N"
    >
      N
    </span>
    <span
      class="mi-index-bar__index"
      data-index="O"
    >
      O
    </span>
    <span
      class="mi-index-bar__index"
      data-index="P"
    >
      P
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Q"
    >
      Q
    </span>
    <span
      class="mi-index-bar__index"
      data-index="R"
    >
      R
    </span>
    <span
      class="mi-index-bar__index"
      data-index="S"
    >
      S
    </span>
    <span
      class="mi-index-bar__index"
      data-index="T"
    >
      T
    </span>
    <span
      class="mi-index-bar__index"
      data-index="U"
    >
      U
    </span>
    <span
      class="mi-index-bar__index"
      data-index="V"
    >
      V
    </span>
    <span
      class="mi-index-bar__index"
      data-index="W"
    >
      W
    </span>
    <span
      class="mi-index-bar__index"
      data-index="X"
    >
      X
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Y"
    >
      Y
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Z"
    >
      Z
    </span>
  </div>
  <div data-index="0">
    <div class="mi-index-anchor">
      1
    </div>
  </div>
  <div data-index="1">
    <div class="mi-index-anchor">
      2
    </div>
  </div>
  <div data-index="2">
    <div class="mi-index-anchor">
      3
    </div>
  </div>
  <div data-index="3">
    <div class="mi-index-anchor">
      4
    </div>
  </div>
</div>
`;

exports[`should update active anchor after page scroll 2`] = `
<div class="mi-index-bar">
  <div class="mi-index-bar__sidebar">
    <span
      class="mi-index-bar__index"
      data-index="A"
    >
      A
    </span>
    <span
      class="mi-index-bar__index mi-index-bar__index--active"
      data-index="B"
    >
      B
    </span>
    <span
      class="mi-index-bar__index"
      data-index="C"
    >
      C
    </span>
    <span
      class="mi-index-bar__index"
      data-index="D"
    >
      D
    </span>
    <span
      class="mi-index-bar__index"
      data-index="E"
    >
      E
    </span>
    <span
      class="mi-index-bar__index"
      data-index="F"
    >
      F
    </span>
    <span
      class="mi-index-bar__index"
      data-index="G"
    >
      G
    </span>
    <span
      class="mi-index-bar__index"
      data-index="H"
    >
      H
    </span>
    <span
      class="mi-index-bar__index"
      data-index="I"
    >
      I
    </span>
    <span
      class="mi-index-bar__index"
      data-index="J"
    >
      J
    </span>
    <span
      class="mi-index-bar__index"
      data-index="K"
    >
      K
    </span>
    <span
      class="mi-index-bar__index"
      data-index="L"
    >
      L
    </span>
    <span
      class="mi-index-bar__index"
      data-index="M"
    >
      M
    </span>
    <span
      class="mi-index-bar__index"
      data-index="N"
    >
      N
    </span>
    <span
      class="mi-index-bar__index"
      data-index="O"
    >
      O
    </span>
    <span
      class="mi-index-bar__index"
      data-index="P"
    >
      P
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Q"
    >
      Q
    </span>
    <span
      class="mi-index-bar__index"
      data-index="R"
    >
      R
    </span>
    <span
      class="mi-index-bar__index"
      data-index="S"
    >
      S
    </span>
    <span
      class="mi-index-bar__index"
      data-index="T"
    >
      T
    </span>
    <span
      class="mi-index-bar__index"
      data-index="U"
    >
      U
    </span>
    <span
      class="mi-index-bar__index"
      data-index="V"
    >
      V
    </span>
    <span
      class="mi-index-bar__index"
      data-index="W"
    >
      W
    </span>
    <span
      class="mi-index-bar__index"
      data-index="X"
    >
      X
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Y"
    >
      Y
    </span>
    <span
      class="mi-index-bar__index"
      data-index="Z"
    >
      Z
    </span>
  </div>
  <div
    data-index="0"
    style="height: 10px;"
  >
    <div class="mi-index-anchor mi-index-anchor--sticky mi-hairline--bottom">
      1
    </div>
  </div>
  <div
    data-index="1"
    style="height: 10px;"
  >
    <div
      class="mi-index-anchor mi-index-anchor--sticky mi-hairline--bottom"
      style="transform: translate3d(0, 10px, 0);"
    >
      2
    </div>
  </div>
  <div data-index="2">
    <div class="mi-index-anchor">
      3
    </div>
  </div>
  <div data-index="3">
    <div class="mi-index-anchor">
      4
    </div>
  </div>
</div>
`;
